; ModuleID = '/home/carl/AnghaBench/linux/arch/sparc/kernel/extr_pci_psycho.c_psycho_pbm_init.c'
source_filename = "/home/carl/AnghaBench/linux/arch/sparc/kernel/extr_pci_psycho.c_psycho_pbm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_pbm_info = type { i32 }
%struct.platform_device = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"PSYCHO\00", align 1
@PBM_CHIP_TYPE_PSYCHO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_pbm_info*, %struct.platform_device*, i32)* @psycho_pbm_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @psycho_pbm_init(%struct.pci_pbm_info* %0, %struct.platform_device* %1, i32 %2) #0 {
  %4 = alloca %struct.pci_pbm_info*, align 8
  %5 = alloca %struct.platform_device*, align 8
  %6 = alloca i32, align 4
  store %struct.pci_pbm_info* %0, %struct.pci_pbm_info** %4, align 8
  store %struct.platform_device* %1, %struct.platform_device** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.pci_pbm_info*, %struct.pci_pbm_info** %4, align 8
  %8 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %9 = load i32, i32* @PBM_CHIP_TYPE_PSYCHO, align 4
  %10 = call i32 @psycho_pbm_init_common(%struct.pci_pbm_info* %7, %struct.platform_device* %8, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load %struct.pci_pbm_info*, %struct.pci_pbm_info** %4, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @psycho_pbm_strbuf_init(%struct.pci_pbm_info* %11, i32 %12)
  %14 = load %struct.pci_pbm_info*, %struct.pci_pbm_info** %4, align 8
  %15 = load %struct.platform_device*, %struct.platform_device** %5, align 8
  %16 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %15, i32 0, i32 0
  %17 = call i32 @psycho_scan_bus(%struct.pci_pbm_info* %14, i32* %16)
  ret void
}

declare dso_local i32 @psycho_pbm_init_common(%struct.pci_pbm_info*, %struct.platform_device*, i8*, i32) #1

declare dso_local i32 @psycho_pbm_strbuf_init(%struct.pci_pbm_info*, i32) #1

declare dso_local i32 @psycho_scan_bus(%struct.pci_pbm_info*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
